<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.airavata.sihemployeemanagement.ProjectDetailsFragment">

    <TextView
        android:id="@+id/fragment_project_details_project_name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_shadow_start_color"/>

    <TextView
        android:id="@+id/fragment_project_details_project_owner_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_owner_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_shadow_start_color"/>

    <TextView
        android:id="@+id/fragment_project_details_project_deadline_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_deadline_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_shadow_start_color"/>

    <TextView
        android:id="@+id/fragment_project_details_project_budget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_budget_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_shadow_start_color"/>

    <TextView
        android:id="@+id/fragment_project_details_project_start_date_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_start_date_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_shadow_start_color"/>

    <TextView
        android:id="@+id/fragment_project_details_project_comments_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_comments_header"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/fragment_project_details_project_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>
</LinearLayout>
